# lease-101

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
docs/: CLAUDE.md  DESIGN.md
docs/blog/: walkthrough.md
docs/design/: algorithm.md  simulator.md  webpage.md
scratch/: CLAUDE.md
scripts/: bloggen.py  gifcap.py
src/: clock.rs  demos.rs  dist.rs  engine.rs  event.rs  frame.rs  lib.rs  rng.rs  scenario.rs
web/: Cargo.toml  Dioxus.toml  build.rs  index.html
web/assets/: main.css
web/content/: 0-intro.md  1-one-to-one.md  2-leader-leases.md  2-lease-manager.md  3-leader-leases.md  3-quorum-leases.md  4-quorum-leases.md  4-roster-leases.md  5-bodega.md  5-roster-leases.md  6-bodega.md
web/src/: components.rs  content.rs  main.rs  playground.rs  scenarios.rs  sim_view.rs
