[package]
name = "lease_web"
version = "0.1.0"
edition = "2024"
description = "Dioxus single-page static website for the Distributed Lease 101 walkthrough"

[dependencies]
# Pinned to match the installed `dx` CLI (0.7.9); dx refuses mismatched versions.
dioxus = { version = "=0.7.9", features = ["web", "router"] }
lease_sim = { path = ".." }
# Wall-clock timer for the playground's animation playback loop (WASM).
gloo-timers = { version = "0.3", features = ["futures"] }
# `Math.random()` seed source, so each Play generates a fresh random run.
js-sys = "0.3"

# Build-time only: the walkthrough prose lives in `content/*.md` and is rendered
# to HTML by `build.rs`, so no markdown parser ships in the WASM bundle.
[build-dependencies]
pulldown-cmark = "0.12"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
